Trigger GPU raster (as opposed to forcing it)

Enabling GPU raster via "trigger" will respect GPU blacklists, while
enabling GPU raster via "force" will not respect GPU blacklists.

We had previously been "forcing" GPU raster, which caused it to be
enabled for on some platforms where it would then spectacularly explode.

Bug: 875891
Change-Id: I435aa86ee70018aca4eafc7fc057380c5238d430
Reviewed-on: https://chromium-review.googlesource.com/1192545
Reviewed-by: enne <enne@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586570}
Former-commit-id: 53d324c3aa89d291dc4f3f095b403dde94883188